--- a/build.xml
+++ b/build.xml
@@ -6,13 +6,13 @@
         <format property="time" pattern="yyyyMMddhhmmss" />  
     </tstamp> 
     <property name="jmeter.home" value="D:\soft\apache-jmeter-2.12" />	
-    <property name="jmeter.testplans.dir" value="C:\Users\user\.jenkins\jobs\testjmeter\workspace" />
+    <property name="jmeter.testplans.dir" value="./" />
     
-    <property name="jmeter.result.jtl.dir" value="C:\Users\user\.jenkins\jobs\testjmeter\workspace\jtl" />
+    <property name="jmeter.result.jtl.dir" value="./jtl" />
     
-    <property name="jmeter.result.html.dir" value="C:\Users\user\.jenkins\jobs\testjmeter\workspace\html" />
+    <property name="jmeter.result.html.dir" value="./html" />
     
-    <property name="jmeter.result.style.dir" value="C:\Users\user\.jenkins\jobs\testjmeter\workspace\style" />
+    <property name="jmeter.result.style.dir" value="./style" />
      
     <property name="ReportName" value="TestReport" />
     <property name="jmeter.result.jtlName" value="${jmeter.result.jtl.dir}/${ReportName}${time}.jtl" />
